<resources>
    <!-- App and activity titles -->
    <string name="app_name">Horizon Interior Designer</string>
    <string name="title_activity_item_selection">Select an item</string>

    <!-- Action bar items -->
    <string name="item_help">Help</string>
    <string name="item_action_back">Back</string>

    <!-- ArView -->
    <string name="btn_select_items_text">Add</string>
    <string name="fab_show_item_options_text">Edit</string>
    <string name="fab_show_item_options_desc">Show item options</string>
    <string name="text_change_design">Change design</string>
    <string name="text_remove_item">Remove</string>
    <string name="text_instruction">Move your phone around to detect the floor</string>

    <!-- Help guide -->
    <string name="btn_next_page">Next</string>
    <string name="btn_skip_guide">Skip</string>
    <string name="text_start_title">Welcome to Horizon Interior Design</string>
    <string name="text_start_info">Design your room with augmented reality</string>
    <string name="text_item_select_title">Select an item</string>
    <string name="text_item_select_info">Select an item from the menu to start designing your room.</string>
    <string name="text_ar_view_1_title">Scan the floor</string>
    <string name="text_ar_view_1_info">Move your phone across the floor to help detect the surfaces.</string>
    <string name="text_ar_view_2_title">Place your item</string>
    <string name="text_ar_view_2_info">Select a space in the dotted area to place your item.</string>
    <string name="text_ar_view_3_title">Experiment</string>
    <string name="text_ar_view_3_info">Use the buttons to add more items, take a photo and edit or delete your item.</string>
    <string name="text_end_title">Ready?</string>
    <string name="text_end_info">Press the button to start designing.</string>
</resources>